# vindao_agents

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ISSUES_ANALYSIS.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  REFACTORING_PLAN.md  TEST_SUITE_REFACTORING_PLAN.md  analyze_tools.py  pyproject.toml  test.py
.github/workflows/: auto-format.yml  publish.yml  test.yml
src/vindao_agents/: Agent.py  Tool.py  __init__.py  main.py
src/vindao_agents/AgentStores/: AgentStore.py  JsonAgentStore.py  __init__.py
src/vindao_agents/InferenceAdapters/: InferenceAdapter.py  LiteLLMInferenceAdapter.py  __init__.py
src/vindao_agents/ToolParsers/: AtSyntaxParser.py  ToolParser.py  __init__.py
src/vindao_agents/agents/: CodeInspector.md  DefaultAgent.md  Developer.md  SoftwareArchitect.md
src/vindao_agents/builders/: __init__.py  message_builder.py
src/vindao_agents/executors/: __init__.py  execute_tool_call.py
src/vindao_agents/formatters/: __init__.py  console_formatter.py  format_exception.py  format_prompt.py
src/vindao_agents/inference_adapters/: InferenceAdapter.py  LiteLLMInferenceAdapter.py  __init__.py
src/vindao_agents/loaders/: __init__.py  load_agent_from_markdown.py  load_markdown_with_frontmatter.py  load_messages_from_dicts.py  load_public_functions_from_identifier.py  load_system_message_template.py
src/vindao_agents/models/: __init__.py  agent.py  messages.py  tool.py
src/vindao_agents/parsers/: __init__.py  parse_docstring_from_file.py  parse_markdown_with_frontmatter.py  parse_tool_call.py
src/vindao_agents/prompts/system_message/: default.prompt
src/vindao_agents/storage/: __init__.py  save_agent_state.py
src/vindao_agents/tools/: __init__.py  bash.py
src/vindao_agents/tools/file_ops/: __init__.py  list_dir.py  read_file.py  read_files.py  write_file.py
src/vindao_agents/utils/: __init__.py  logger.py  path_resolution.py
src/vindao_agents_api/: main.py
src/vindao_agents_old/: Agent.py  LiteLLMAdapter.py  Tool.py  __main__.py  main.py
src/vindao_agents_old/cli/: main.py
src/vindao_agents_old/configs/tool_usage/: default.md
src/vindao_agents_old/execution/: __init__.py  execute_tool_call.py
src/vindao_agents_old/formatters/: __init__.py  format_exception.py
src/vindao_agents_old/loaders/: __init__.py  load_public_functions_from_identifier.py
src/vindao_agents_old/models/: agent.py  messages.py  tool.py
src/vindao_agents_old/parsers/: __init__.py  parse_and_execute_tool_call.py  parse_markdown.py  parse_tool_call.py
src/vindao_agents_old/tui/: __init__.py  app.py  config.py  setup_tools.py
src/vindao_agents_old/tui/screens/: __init__.py  chat.py  home.py  setup.py
src/vindao_agents_old/tui/widgets/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_tool.py
tests/InferenceAdapters/: test_litellm_inference_adapter.py
tests/builders/: test_message_builder.py
tests/executors/: test_execute_tool_call.py
tests/formatters/: test_console_formatter.py  test_format_exception.py  test_format_prompt.py
tests/loaders/: test_load_markdown_with_frontmatter.py  test_load_messages_from_dicts.py  test_load_public_functions_from_identifier.py  test_load_system_message_template.py
tests/parsers/: test_parse_docstring_from_file.py
tests/tools/file_ops/: test_list_dir.py  test_read_files.py
tests/utils/: test_logger.py  test_path_resolution.py
vindao_agents_frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
vindao_agents_frontend/app/: app.vue
vindao_agents_frontend/app/assets/css/: main.css
vindao_agents_frontend/app/components/: AppBar.vue  Message.vue  SideBar.vue
vindao_agents_frontend/app/composables/: Session.ts  Sessions.ts  Websocket.ts
vindao_agents_frontend/app/pages/: index.vue
vindao_agents_frontend/app/pages/Session/: [session].vue
