[project]
name = "vindao_agents"
version = "0.1.0"
description = "An extensible AI agent framework for building interactive, tool-enabled conversational agents with streaming support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Vincent", email = "vindao@outlook.com" }
]
maintainers = [
    { name = "Vincent", email = "vindao@outlook.com" }
]
requires-python = ">=3.12"
keywords = [
    "ai", "agents", "llm", "chatbot", "automation",
    "tool-calling", "conversational-ai", "ai-framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]>=0.120.1",
    "jinja2>=3.1.6",
    "litellm>=1.78.7",
    "markdown>=3.9",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.3",
    "python-frontmatter>=1.1.0",
    "rich>=14.2.0",
    "textual>=6.4.0",
]

[project.urls]
Homepage = "https://github.com/vindao/vindao_agents"
Repository = "https://github.com/vindao/vindao_agents"
Issues = "https://github.com/vindao/vindao_agents/issues"
Changelog = "https://github.com/vindao/vindao_agents/blob/main/CHANGELOG.md"

[project.scripts]
agent = "vindao_agents.main:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "bump2version>=1.0.1",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pre-commit>=4.0.1",
]

[tool.uv_build]
# Include agent templates and prompt files in the package
include = [
    "src/vindao_agents/agents/*.md",
    "src/vindao_agents/prompts/**/*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
anyio_mode = "auto"
addopts = "--cov=vindao_agents --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# Minimal AI-friendly configuration - only catch real issues
select = [
    "F",      # Pyflakes - actual errors (undefined names, unused imports)
    "E9",     # Syntax errors only (not style)
    "I",      # Import sorting (keeps imports clean)
    "S",      # Security issues (bandit)
]
ignore = [
    "S101",   # assert is fine in tests and development
    "S307",   # eval() is intentional for tool execution (agent framework needs this)
    "S602",   # shell=True is intentional for bash tool (agent framework needs this)
    "S603",   # subprocess without shell=True is usually fine
    "S607",   # partial executable path is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",      # Disable all security checks in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
disallow_incomplete_defs = false  # Set to true for strict mode
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "frontmatter.*",
    "markdown.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used (ok in tests)

[tool.bandit.assert_used]
skips = ["*/test_*.py", "tests/*"]
